@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.3 2005/09/26 15:06:29 wiz Exp $
+@comment $NetBSD: PLIST,v 1.4 2006/12/27 05:57:25 wulf Exp $
 bin/grig
 man/man1/grig.1
 share/grig/AUTHORS
@@ -6,10 +6,10 @@ share/grig/COPYING
 share/grig/ChangeLog
 share/grig/NEWS
 share/grig/README
-share/grig/pixmaps/digits_normal.png
-share/grig/pixmaps/digits_small.png
-share/grig/pixmaps/grig-logo.png
-share/grig/pixmaps/ic910.png
-share/grig/pixmaps/smeter.png
-@dirrm share/grig/pixmaps
+share/pixmaps/grig/digits_normal.png
+share/pixmaps/grig/digits_small.png
+share/pixmaps/grig/grig-logo.png
+share/pixmaps/grig/ic910.png
+share/pixmaps/grig/smeter.png
+@dirrm share/pixmaps/grig
 @dirrm share/grig
