@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2005/09/28 16:49:56 rillig Exp $
+$NetBSD: distinfo,v 1.5 2006/12/27 05:57:25 wulf Exp $
 
-SHA1 (grig-0.4.3.tar.gz) = 01bc82fce87fd596a80b03abec795e8bdd816053
-RMD160 (grig-0.4.3.tar.gz) = 63636c6b05b8a373cda95c31662a6d0b6437651a
-Size (grig-0.4.3.tar.gz) = 436527 bytes
+SHA1 (grig-0.7.2.tar.gz) = 7b5f1e7f77a8b8907a77ba11a1e17c2eaff884f2
+RMD160 (grig-0.7.2.tar.gz) = 2184e7e4fb343a5d8f391337273f4d864a088c9c
+Size (grig-0.7.2.tar.gz) = 494153 bytes
